# amplifier-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  ISSUES.md  README.md  RELEASING.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.amplifier/evaluation/: .gitignore  README.md  pyproject.toml  run.py
.amplifier/evaluation/agents/amplifier-agent-local/: extract.yaml  install.yaml  invocation.md  meta.yaml
.amplifier/evaluation/agents/amplifier-foundation/: extract.yaml  install.yaml  invocation.md  meta.yaml
.amplifier/evaluation/agents/opencode-amplifier-agent/: extract.yaml  install.yaml  invocation.md  meta.yaml
.amplifier/evaluation/agents/opencode-vanilla/: extract.yaml  install.yaml  invocation.md  meta.yaml
.amplifier/evaluation/providers/: anthropic-opus-4-8.yaml  anthropic-sonnet-retry.yaml
.amplifier/evaluation/src/eval/: __init__.py  automation_bench_lifecycle.py  cli.py  dtu.py  install.py  lifecycle.py  loaders.py  local_mirror.py  metrics.py  scheduler.py  schema.py  swe_bench_lifecycle.py
.amplifier/evaluation/src/eval/ai_user/: __init__.py  ai_user.py  tools.py
.amplifier/evaluation/src/eval/automation_bench/: ab_tool.py  extract_task.py
.amplifier/evaluation/src/eval/extractor/: __init__.py  extractor.py  tools.py
.amplifier/evaluation/src/eval/graders/: __init__.py  automation_bench.py  base.py  deterministic.py  model_rubric.py  schema.py  tools.py
.amplifier/evaluation/src/eval/task_loaders/: __init__.py  automation_bench.py  base.py  static.py  swe_bench.py
.amplifier/evaluation/tasks/amplifier-agent-capabilities/mode-brainstorm-exploratory/: grader.yaml  profile.yaml  task.yaml
.amplifier/evaluation/tasks/amplifier-agent-capabilities/mode-per-turn-disable/: grader.yaml  profile.yaml  task.yaml
.amplifier/evaluation/tasks/amplifier-agent-capabilities/mode-plan-persistence/: grader.yaml  profile.yaml  task.yaml
.amplifier/evaluation/tasks/amplifier-agent-capabilities/skill-arguments-passthrough/: grader.yaml  profile.yaml  task.yaml
.amplifier/evaluation/tasks/amplifier-agent-capabilities/skill-config-location/: grader.yaml  profile.yaml  task.yaml
.amplifier/evaluation/tasks/amplifier-agent-capabilities/skill-council-multi-lens/: grader.yaml  profile.yaml  task.yaml
.amplifier/evaluation/tasks/amplifier-agent-capabilities/skill-invoke-and-behave/: grader.yaml  profile.yaml  (+1 more)
.amplifier/evaluation/tasks/automation-bench/: grader.yaml
.amplifier/evaluation/tasks/swe-bench-pro/: grader.yaml
(+400 files in other folders)
